fix: prevent click offset by setting overflow:hidden on #root

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
 
 #root {
   height: 100%;
-  overflow: visible;
+  overflow: hidden;
 }
 
 body {
